Edited CSS and added photos

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -66,7 +66,7 @@
 
             <div class="destination-item">
                 <h2>Malpe Beach</h2>
-                <img src="MalpeBeach.jpg" alt="Malpe beach" class="destination-image"
+                <img src="MalpeBeach.jpg" alt="Malpe beach" class="destination-image">
                 <p>Malpe Beach is a pristine and serene beach located just 6 km from Udupi. It's popular for both locals and tourists, offering gokden sands, clear water, and a range of water sports. </p>
                 <ul>
                     <li><strong>Highlights:</strong>Water sports like jet-siking and parasailing ,sunset views, beachs shacks offering fresh seafood.</li>
